added dashboard, pagenotfound files and also organized files hierarchy

--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -8,9 +8,9 @@
 <body>
     <form action="/login" method="POST">
         <label>user name</label>
-        <input type="text" id="name" name="name_val">
+        <input type="text" id="name" name="name_val"><br>
         <label>password</label>
-        <input type="password" id="pass" name="pass_val">
+        <input type="password" id="pass" name="pass_val"><br>
         <input type="submit">
     </form>
 </body>
